--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     html, body, #cat-map {
       height: 100%;
     }
+
+    a {
+      text-decoration: bold;
+    }
   </style>
   <script src='//api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
   <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
