debug: bold title in tooltip

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     a {
-      text-decoration: bold;
+      font-style: bold;
     }
   </style>
   <script src='//api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
