--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       height: 100%;
     }
 
-    a {
-      font-style: bold;
+    .popup a {
+      font-weight: bold;
     }
   </style>
   <script src='//api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.js'></script>
