--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
       font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
     }
 
+    h1 {
+      font-size: 2em;
+    }
+
+    h2 {
+      font-size: 1em;
+    }
+
     h2 a {
       color: #aaa;
+      text-decoration: none;
     }
 
   </style>
