--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
 
     h1 {
       font-size: 2em;
+      margin: 10px;
     }
 
     h2 {
       font-size: 1em;
+      font-weight: normal;
+      margin-top: 0px;
     }
 
     h2 a {
