--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     html, body, #cat-map {
-      height: 90%;
+      height: 100%;
     }
 
     .leaflet-container a {
@@ -30,9 +30,10 @@
     }
 
     h2 {
-      font-size: 1em;
+      font-size: 1.2em;
       font-weight: normal;
       margin-top: 0px;
+      margin-left: 10px;
     }
 
     h2 a {
