--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       margin: 0;
     }
 
-    html, body, #cat-map {
-      height: 99%;
+    #cat-map {
+      height: 95%;
     }
 
     .leaflet-container a {
