--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       margin: 0;
     }
 
-    #cat-map {
-      height: 95%;
+    html, body, #cat-map {
+      height: 90%;
     }
 
     .leaflet-container a {
